[package]
name = "jwt_verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
reqwest = { version = "0.12.23", features = ["json"] }
rsa = { version = "0.9.8", features = ["sha2"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
signature = "2.2.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
